--- a/css/sign.css
+++ b/css/sign.css
@@ -26,8 +26,8 @@ h1{
    margin-left: 10%;
 }
 .photo{
-    padding-right: 5%;
-    padding-top: 5%;
+    padding-right: 2%;
+    padding-top: 2%;
 }
 h2{
   color: brown;  
@@ -40,11 +40,12 @@ h2{
     text-align: left;
 }
 .label{
-    font-size: 30px;
+    font-size: 20px;
 }
 .input{
     font-size: 33px;
     border-radius: 5px;
+    border: none;
 }
 .btn{
     background-color: brown;
@@ -52,13 +53,13 @@ h2{
     height: 50px;
     width: 90px;
     color: white;
-    font-size: 25px;
+    font-size: 20px;
     border-radius: 5px;
 }
 h3{
     padding-top: 5%;
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
 }
 h3 a{
     text-decoration: none;
