--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,12 @@ h2{
     text-align: left;
 }
 .label{
-    font-size: 30px;
+    font-size: 25px;
 }
 .input{
     font-size: 33px;
     border-radius: 5px;
+    border: none;
 }
 .btn{
     background-color: brown;
@@ -51,13 +52,13 @@ h2{
     height: 50px;
     width: 90px;
     color: white;
-    font-size: 25px;
+    font-size: 20px;
     border-radius: 5px;
 }
 h3{
     padding-top: 5%;
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
 }
 h3 a{
     text-decoration: none;
